relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-10.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@creditcard:replace|4242424242424242": {
    "type": "string",
    "value": "[creditcard]"
  },
  "_meta": {
    "@creditcard:replace|4242424242424242": {
      "value": {
        "": {
          "rem": [
            [
              "@creditcard:replace",
              "s",
              0,
              12
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
