relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-13.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@iban|DE89370400440532013000": {
    "type": "string",
    "value": "[iban]"
  },
  "_meta": {
    "@iban|DE89370400440532013000": {
      "value": {
        "": {
          "rem": [
            [
              "@iban",
              "s",
              0,
              6
            ]
          ],
          "len": 22
        }
      }
    }
  }
}
