relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-15.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@iban:remove|DE89370400440532013000": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@iban:remove|DE89370400440532013000": {
      "value": {
        "": {
          "rem": [
            [
              "@iban:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 22
        }
      }
    }
  }
}
