relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-16.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@iban:mask|DE89370400440532013000": {
    "type": "string",
    "value": "**********************"
  },
  "_meta": {
    "@iban:mask|DE89370400440532013000": {
      "value": {
        "": {
          "rem": [
            [
              "@iban:mask",
              "m",
              0,
              22
            ]
          ],
          "len": 22
        }
      }
    }
  }
}
