relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-18.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@mac:replace|4a:00:04:10:9b:50": {
    "type": "string",
    "value": "[mac]"
  },
  "_meta": {
    "@mac:replace|4a:00:04:10:9b:50": {
      "value": {
        "": {
          "rem": [
            [
              "@mac:replace",
              "s",
              0,
              5
            ]
          ],
          "len": 17
        }
      }
    }
  }
}
