relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-2.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@ip:replace|127.0.0.1": {
    "type": "string",
    "value": "[ip]"
  },
  "_meta": {
    "@ip:replace|127.0.0.1": {
      "value": {
        "": {
          "rem": [
            [
              "@ip:replace",
              "s",
              0,
              4
            ]
          ],
          "len": 9
        }
      }
    }
  }
}
