relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-20.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@mac:mask|4a:00:04:10:9b:50": {
    "type": "string",
    "value": "*****************"
  },
  "_meta": {
    "@mac:mask|4a:00:04:10:9b:50": {
      "value": {
        "": {
          "rem": [
            [
              "@mac:mask",
              "m",
              0,
              17
            ]
          ],
          "len": 17
        }
      }
    }
  }
}
